--- a/src/pages/ConsolePage.scss
+++ b/src/pages/ConsolePage.scss
@@ -29,7 +29,7 @@
       img {
         width: 24px;
         height: 24px;
-      }
+      } 
     }
   }
 
@@ -66,7 +66,7 @@
       }
     }
     .content-right {
-      width: 300px;
+      width: 50%;
       flex-shrink: 0;
       display: flex;
       flex-direction: column;
@@ -138,9 +138,8 @@
         flex-shrink: 0;
         width: 100%;
         overflow: hidden;
-        height: 200px;
+        height: 50%;
         min-height: 0;
-        max-height: 200px;
         border-top: 1px solid #e7e7e7;
       }
     }
@@ -276,5 +275,15 @@
         color: currentColor;
       }
     }
+  }
+}
+
+[data-component='iframe'] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  .leaflet-container {
+    height: 100%;
+    width: 100%;
   }
 }
